# journey-logger

./: .gitignore  README.md  cloud_entry_point.py  main.py  map_processor.py  map_utils.py  miles_bot.py  pyproject.toml  test.py  test_gmaps_utils.py  test_map_processor.py  test_write_to_sheet.py
resources/data/: towns.csv
src/journeyhelper/: map_processor.py  sheet_writer.py
src/journeylogger/: __main__.py  gmaps_utils.py  map_processor.py  map_utils.py  sheet_writer.py  telegram_bot.py
tests/: test_apple_maps_link_parsing.py  test_gmaps_utils.py  test_map_processor.py  test_write_to_sheet.py
